Improve homepage responsiveness, fix some layout issues

--- a/_assets/stylesheets/mhv.scss
+++ b/_assets/stylesheets/mhv.scss
@@ -5,21 +5,30 @@
 //  Homepage
 article.home {
   section.hero {
-    @include make-md-column(8);
-    @include make-md-column-offset(2);
+    @include make-sm-column(8);
+    @include make-sm-column-offset(2);
     padding: 2em 0;
   }
 
-  div.content {
+  .content {
     @include make-row();
+    padding: 0 10%;
+
+
+    @media (min-width: $screen-md) {
+      padding: 0;
+    }
 
     section.main {
-      @include make-md-column(7);
+      @include make-sm-column(8);
     }
 
     section.sidebar {
-      @include make-md-column(3);
-      @include make-md-column-offset(1);
+      @include make-sm-column(4);
+
+      .calendar {
+        width: 100%;
+      }
 
       h3:first-of-type {
         margin-top: 0;
